# aurea_sre_bot

./: Dockerfile  Procfile  pyproject.toml
.github/workflows/: sre-prod.yml
aurea_sre_bot.egg-info/: SOURCES.txt
bot/: __init__.py  dbcheck.py  main.py
bot/collectors/: railway.py
config/: services.prod.yaml  services.yaml  services.yaml.bak.1762384990
scripts/: sre-cron.sh  sre-prod.sh
